# declarative-discord-rich-presence

./: Cargo.toml  README.md
crates/discord-rich-presence/src/: activity.rs
src/: declarative_discord_ipc.rs  lib.rs
tests/: test_main.rs
