[package]
name = "declarative-discord-rich-presence"
version = "0.1.0"
authors = ["KPidS"]
edition = "2021"
description = "An abstraction build on top of discord-rich-presence that makes possible to use it in a more declarative way"
readme = "README.md"
repository = "https://github.com/KPidS/declarative-discord-rich-presence"
license = "MIT"
keywords = ["discord", "rich-presence", "ipc"]

[dependencies]
discord-rich-presence = "0.2.3"

[patch.crates-io]
discord-rich-presence = { path = "./crates/discord-rich-presence" }
